--- a/css/styles.css
+++ b/css/styles.css
@@ -35,9 +35,10 @@ body {
 }
 
 .sw-title {
-    font-size: 5rem;
+    font-size: 4.5rem;
     color: #FFFF00;
     animation: flicker 1.5s infinite alternate;
+    margin-top: 10px;
 }
 
 @keyframes flicker {
@@ -55,15 +56,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
-    margin: -100px 0;
+    gap: 20px;
+    margin: -120px 0;
 }
 .menu-button {
     background: #333;
     color: #fff; 
     text-align: center;
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     padding: 15px 20px;
     border: 2px solid #FFFF00;
     border-radius: 10px;
@@ -71,6 +72,7 @@ body {
     max-width: 500px;
     cursor: pointer;
     transition: all 0.3s ease;
+    margin-bottom: 15px;
 }
 .menu-button:hover {
     background: #FFFF00; 
