--- a/css/styles.css
+++ b/css/styles.css
@@ -108,11 +108,13 @@ body {
 @media (max-width: 768px) {
     .sw-title {
         font-size: 2.5rem; /* Reduce title size */
+        margin-bottom: -50px;
     }
 
     .menu-button {
         font-size: 1rem;
         padding: 10px 15px;
+        margin-top: 1px;
     }
 
     .top-bar {
